<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/normal_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightYellow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/container_shadow"
        android:padding="@dimen/small_padding"
        android:id="@+id/searchContainerLayout"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           style="@style/TextView"
            android:text="@string/select_city"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/citySpinner"
            android:layout_marginTop="@dimen/small_padding"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/select_shop_s_name"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shopSpinner"
            android:layout_marginTop="@dimen/small_padding"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/select_update_day"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/updateDaySpinner"
            android:layout_marginTop="@dimen/small_padding"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/apply"
            style="@style/Button"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/small_padding"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/allShopsLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/searchContainerLayout"
        android:layout_marginTop="@dimen/medium_padding"
        android:background="@color/controlsYellow"
        android:text="@string/show_all_shops"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_all_shops"
            android:layout_centerVertical="true"
            style="@style/TextView"
            android:textStyle="bold"
            android:textSize="@dimen/button_text_size"
            android:paddingStart="@dimen/normal_padding"
            android:layout_toStartOf="@+id/arrowDownImage"
           />

        <ImageView
            android:id="@+id/arrowDownImage"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/normal_padding"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/alShopsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/allShopsLayout"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/normal_padding"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/apply"
        android:id="@+id/applyButton"
       />

</RelativeLayout>