<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightYellow"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinatorLayout"
    app:layout_behavior=".util.FancyBehavior">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:elevation="0dp"
        android:background="@color/lightYellow"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimary"
            app:titleEnabled="false"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                android:background="@color/lightYellow"
                android:padding="@dimen/normal_padding">


                <LinearLayout
                    android:id="@+id/searchContainerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/container_shadow"
                    android:orientation="vertical"
                    android:padding="@dimen/small_padding">

                    <TextView
                        style="@style/TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_city" />

                    <Spinner
                        android:id="@+id/citySpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_padding"
                        android:background="@drawable/yellow_border" />

                    <TextView
                        style="@style/TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_padding"
                        android:text="@string/select_shop_s_name" />

                    <Spinner
                        android:id="@+id/shopNameSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_padding"
                        android:background="@drawable/yellow_border" />


                    <TextView
                        style="@style/TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_padding"
                        android:text="@string/select_update_day" />

                    <Spinner
                        android:id="@+id/updateDaySpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_padding"
                        android:background="@drawable/yellow_border" />

                    <Button
                        android:id="@+id/showOnMapButton"
                        style="@style/Button"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginTop="@dimen/normal_padding"
                        android:text="@string/show_on_map"
                        android:textAllCaps="false"
                        android:textStyle="bold" />
                </LinearLayout>

                <apobooking.apobooking.com.secondhands.ui.ShowSelectedShopsButton
                    android:id="@+id/allShopsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_below="@+id/searchContainerLayout"
                    android:layout_marginBottom="@dimen/normal_padding"
                    android:layout_marginTop="@dimen/medium_padding" />
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_collapseMode="pin"
                android:background="@color/lightYellow"
                app:layout_scrollFlags="scroll|enterAlways"/>

                <!--<RelativeLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="?attr/actionBarSize">-->

                    <!--<TextView-->
                        <!--android:id="@+id/toolbarTitle"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="?attr/actionBarSize"-->
                        <!--android:layout_toStartOf="@+id/arrowUpImageView"-->
                        <!--android:gravity="center_vertical"-->
                        <!--android:textColor="@color/black"-->
                        <!--android:textSize="@dimen/button_text_size" />-->
                <!--</RelativeLayout>-->
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <apobooking.apobooking.com.secondhands.util.MyScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <android.support.v7.widget.RecyclerView
                android:id="@+id/alShopsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:focusable="true"
                android:overScrollMode="never"
                android:focusableInTouchMode="true"
                android:visibility="gone"
                tools:listitem="@layout/shop_item"
                />


            <!--<ProgressBar-->
                <!--android:id="@+id/progressBarRecyclerView"-->
                <!--style="?android:attr/progressBarStyleHorizontal"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/alShopsRecyclerView"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:indeterminate="false"-->
                <!--android:visibility="gone" />-->
        <!--</RelativeLayout>-->
    </apobooking.apobooking.com.secondhands.util.MyScrollView>


</android.support.design.widget.CoordinatorLayout>